Nyoba contoh yg lain lagi

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ td {
  }
  </style>
  <script type="text/javascript" src="cordova.js"></script>
- <script type="text/javascript" src="SQLitePlugin.js"></script>
+ <script type="text/javascript" src="js/SQLitePlugin.js"></script>
 <script type="text/javascript" charset="utf-8">
 document.addEventListener("deviceready", onDeviceReady, false);
 function onDeviceReady() {
