--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+    <script src="js/ng-cordova.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
-    <script type="text/javascript" src="js/SQLitePlugin.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
